app/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: stephan-devspaces
spec:
  selector:
    controller.devfile.io/devworkspace_name: code-assistant
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 11434
