app/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: stephan-devspaces
spec:
  selector:
    app: open-webui
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
