app/webui-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webui-route
  namespace: stephan-devspaces
  labels: {}
spec:
  to:
    kind: Service
    name: open-webui-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  host: 
  path: /
  port:
    targetPort: http
